<resources>
    <string name="app_name">RaceDayReminder</string>

    <!-- Component labels. -->
    <string name="city_code">City Code</string>
    <string name="race_no">Race No</string>
    <string name="race_sel">Race Sel</string>
    <string name="race_time">Race Time</string>
    <string name="race_code">Race Code</string>

    <!-- Menu labels. -->
    <string name="lbl_delete">Delete</string>
    <string name="lbl_delete_all">Delete All</string>
    <string name="lbl_refresh">Refresh</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_add">New</string>
    <string name="lbl_race_count">Count</string>
    <string name="lbl_notifications">Notifications</string>

    <!-- ActionBar title. -->
    <string name="title_race_day">Race Day Reminder</string>

    <!-- Keys. -->
    <string name="key_edit_type">ke_edit_type</string>

    <!-- EditText layout default values. -->
    <string name="abbrv_city_code">B</string>
    <string name="abbrv_time">23:59</string>
    <string name="abbrv_date">01/01/2019</string>
    <string name="abbrv_race_no">8</string>
    <string name="abbrv_race_sel">8</string>
    <string name="abbrv_race_code">R</string>

    <string name="edit_race">Edit Race</string>
    <string name="copy_race">Copy Race</string>

    <!-- Delete Dialog text. -->
    <string name="title_delete_all">Delete All</string>
    <string name="message_delete_all">This cannot be undone. Are you sure?</string>

    <!-- Button labels. -->
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_time">Time</string>

    <!-- Labels. -->
    <string name="lbl_location">Location</string>
    <string name="lbl_code">Code</string>
    <string name="lbl_number">Race No</string>
    <string name="lbl_select">Select</string>
    <string name="lbl_selects">Other\nSelects</string>

    // Text filter values.
    <string name="city_codes">ABCDEFILMNOPQSTVXZ</string>
    <string name="race_codes">RTGS</string>
</resources>