<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_edit_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ui.fragment.EditFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_guideline_h_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <EditText
        android:id="@+id/id_et_city_code"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/tv_border"
        android:gravity="center_horizontal|center_vertical"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/id_guideline_h_top"
        android:inputType="textCapCharacters|textFilter"
        android:digits="@string/city_codes"
        android:maxLength="1"/>

    <EditText
        android:id="@+id/id_et_race_code"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/tv_border"
        android:gravity="center_horizontal|center_vertical"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintStart_toEndOf="@+id/id_et_city_code"
        app:layout_constraintTop_toTopOf="@+id/id_guideline_h_top"
        android:inputType="textCapCharacters|textFilter"
        android:digits="@string/race_codes"
        android:maxLength="1"/>

    <EditText
        android:id="@+id/id_et_race_num"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/tv_border"
        android:gravity="center_horizontal|center_vertical"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintStart_toEndOf="@+id/id_et_race_code"
        app:layout_constraintTop_toTopOf="@+id/id_guideline_h_top"
        android:inputType="number"
        android:maxLength="2"/>

    <EditText
        android:id="@+id/id_et_race_sel"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/tv_border"
        android:gravity="center_horizontal|center_vertical"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintStart_toEndOf="@+id/id_et_race_num"
        app:layout_constraintTop_toTopOf="@+id/id_guideline_h_top"
        android:inputType="number"
        android:maxLength="2"/>

    <EditText
        android:id="@+id/id_et_race_sel2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/tv_border"
        android:gravity="center_horizontal|center_vertical"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/id_guideline_h_top" />

    <EditText
        android:id="@+id/id_et_race_sel3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/tv_border"
        android:gravity="center_horizontal|center_vertical"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintStart_toEndOf="@+id/id_et_race_sel2"
        app:layout_constraintTop_toTopOf="@+id/id_guideline_h_top" />

    <EditText
        android:id="@+id/id_et_race_sel4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/tv_border"
        android:gravity="center_horizontal|center_vertical"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintStart_toEndOf="@+id/id_et_race_sel3"
        app:layout_constraintTop_toTopOf="@+id/id_guideline_h_top" />

    <Button
        android:id="@+id/id_btn_time"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginTop="160dp"
        android:drawableStart="@drawable/ic_clock_outline"
        android:text="@string/lbl_time"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintStart_toStartOf="@+id/id_et_city_code"
        app:layout_constraintTop_toTopOf="@+id/id_guideline_h_top" />

    <EditText
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_location"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintEnd_toEndOf="@+id/id_et_city_code"
        app:layout_constraintStart_toStartOf="@+id/id_et_city_code"
        app:layout_constraintTop_toTopOf="@+id/id_guideline_h_top" />

    <EditText
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_code"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintEnd_toEndOf="@+id/id_et_race_code"
        app:layout_constraintStart_toStartOf="@+id/id_et_race_code"
        app:layout_constraintTop_toTopOf="@+id/id_guideline_h_top" />

    <EditText
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_number"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintEnd_toEndOf="@+id/id_et_race_num"
        app:layout_constraintStart_toStartOf="@+id/id_et_race_num"
        app:layout_constraintTop_toTopOf="@+id/id_guideline_h_top" />

    <EditText
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_select"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintEnd_toEndOf="@+id/id_et_race_sel"
        app:layout_constraintStart_toStartOf="@+id/id_et_race_sel"
        app:layout_constraintTop_toTopOf="@+id/id_guideline_h_top" />

    <EditText
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/lbl_selects"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintEnd_toStartOf="@+id/id_et_race_sel2"
        app:layout_constraintTop_toTopOf="@+id/id_et_race_sel2" />

    <Button
        android:id="@+id/id_btn_save"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginTop="160dp"
        android:text="@string/lbl_save"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintEnd_toEndOf="@+id/id_et_race_sel"
        app:layout_constraintTop_toTopOf="@+id/id_guideline_h_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="256dp"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>